partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/AP_Contact_del__c.field-meta.xml
<CustomField>
    <fullName>AP_Contact_del__c</fullName>
    <defaultValue>&quot;Name&quot;</defaultValue>
    <label>AP Contact</label>
    <length>55</length>
    <type>Text</type>
</CustomField>