partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/AP_Email__c.field-meta.xml
<CustomField>
    <fullName>AP_Email__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Send Invoice To (Email):</label>
    <length>55</length>
    <type>Text</type>
</CustomField>