partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Billing_phone_number__c.field-meta.xml
<CustomField>
    <fullName>Billing_phone_number__c</fullName>
    <label>Billing phone number</label>
    <type>Phone</type>
</CustomField>