partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/CSM_Notes__c.field-meta.xml
<CustomField>
    <fullName>CSM_Notes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSM Notes</label>
    <referenceTo>CSM_Notes__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>