partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/CSM_Upgrade__c.field-meta.xml
<CustomField>
    <fullName>CSM_Upgrade__c</fullName>
    <formula>AND(
 OR(
    ISPICKVAL(CSM_Notes__r.Add_On_Type__c,&quot;Renewal&quot;)
),
  
  
  ISPICKVAL(CSM_Notes__r.Add_On_Type__c ,&quot;EXPANSION&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CSM Upgrade</label>
    <type>Checkbox</type>
</CustomField>