partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Include_Standard_T_C__c.field-meta.xml
<CustomField>
    <fullName>Include_Standard_T_C__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Standard T&amp;C</label>
    <type>Checkbox</type>
</CustomField>