partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Internal_Only__c.field-meta.xml
<CustomField>
    <fullName>Internal_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Only</label>
    <type>Checkbox</type>
</CustomField>