partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/License_Term_Note__c.field-meta.xml
<CustomField>
    <fullName>License_Term_Note__c</fullName>
    <formula>if(ispickval(Opportunity.Type, &quot;New Business&quot;), &quot;&quot;,
   if(ispickval(Opportunity.Type, &quot;Renewal&quot;), &quot;Quote for the period of &quot; + Text(Opportunity.Account_License_Expiration_Date__c) + &quot; - &quot; +  Text(Opportunity.License_Expiration_Date_for_This_Opp__c) + &quot; (yyyy-mm-dd)&quot;,
      if(ispickval(Opportunity.Type, &quot;Expansion&quot;), &quot;Quote is co-termed to expire on &quot; + Text(Opportunity.License_Expiration_Date_for_This_Opp__c) + &quot; (yyyy-mm-dd)&quot;, &quot;&quot;
      )
   )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Term Note</label>
    <type>Text</type>
</CustomField>