partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Prepare_By_Date__c.field-meta.xml
<CustomField>
    <fullName>Prepare_By_Date__c</fullName>
    <formula>IF (  Opportunity.Account.Renewal_Quote_Early__c, ExpirationDate -90, ExpirationDate -45 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prepare By Date:</label>
    <type>Date</type>
</CustomField>