partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Quote_Alerts__c.field-meta.xml
<CustomField>
    <fullName>Quote_Alerts__c</fullName>
    <formula>if ( Quote_ARR__c &lt;  Account_Current_ARR__c, &quot;Quote ARR is smaller than current ARR\n&quot;, &quot;&quot; ) &amp;
if ( ExpirationDate &gt;  Opportunity.CloseDate,&quot;Quote expiration date is after opportunity&apos;s close date&quot;, &quot;&quot;)</formula>
    <label>Quote Alerts</label>
    <type>Text</type>
</CustomField>