partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Quote_ARR__c.field-meta.xml
<CustomField>
    <fullName>Quote_ARR__c</fullName>
    <formula>( TotalPrice /   Term__c ) *12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>