partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/ROR_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>ROR_Exp_Date__c</fullName>
    <label>ROR Exp Date</label>
    <type>Date</type>
</CustomField>