partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Send_Invoice_to_name__c.field-meta.xml
<CustomField>
    <fullName>Send_Invoice_to_name__c</fullName>
    <label>Send invoice to (name):</label>
    <length>60</length>
    <type>Text</type>
</CustomField>