partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Send_License_Key_To_Name__c.field-meta.xml
<CustomField>
    <fullName>Send_License_Key_To_Name__c</fullName>
    <defaultValue>&quot; &quot;</defaultValue>
    <label>Send License Key To (Name):</label>
    <length>100</length>
    <type>Text</type>
</CustomField>