partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Send_via_DocuSign__c.field-meta.xml
<CustomField>
    <fullName>Send_via_DocuSign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send via DocuSign</label>
    <type>Checkbox</type>
</CustomField>