partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/T_C__c.field-meta.xml
<CustomField>
    <fullName>T_C__c</fullName>
    <label>T&amp;C</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>