partial/quote-pdf-partial/force-app/main/default/objects/Quote/fields/Term_del_del__c.field-meta.xml
<CustomField>
    <fullName>Term_del_del__c</fullName>
    <label>Subscription Term</label>
    <length>25</length>
    <type>Text</type>
</CustomField>